--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
     <link rel="stylesheet" href="assets/css/color-switcher.css">
     <!-- RESPONSIVE CSS -->
     <link rel="stylesheet" href="assets/css/responsive.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
   <div class="preloader-area">
