--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    
     <!-- ALL GOOGLE FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Rubik:300,500,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -19,7 +20,7 @@
     <link rel="stylesheet" href="assets/owlcarousel/css/owl.theme.css">
     <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
         <!-- MAGNIFIC CSS -->
-    <link rel="stylesheet" href="assets/css/magnific-popup.css">
+    <!-- <link rel="stylesheet" href="assets/css/magnific-popup.css"> -->
     <!-- ANIMATE CSS -->
     <link rel="stylesheet" href="assets/css/animate.min.css">
     <!-- MAIN STYLE CSS -->
