--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Thetixs</title>
+  <title>Thetixs: Book Amazing Activities, Tours, and more</title>
+  <meta  name="description" content="First e'commerce marketplace for concierge, travel and hospitality profesionals"/>
+    <meta name="keywords" content="thetixs, tixs, miami, activity, tour, tours, activities, booking, concierge, partner, affiliate">
   <base href="./">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
